<resources>
    <string name="app_name">阿强复读</string>
    <string name="end">结束</string>
    <string name="begin">开始</string>
    <string name="next">下一句</string>
    <string name="previous">上一句</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="reduce"><![CDATA[<<-]]></string>
    <string name="add"><![CDATA[+>>]]></string>
    <string name="welcome">welcome.mp3</string>

    <string name="actionSettings">设置</string>
    <string name="actionOpenFile">打开文件</string>
    <string name="actionDelete">删除</string>
    <string name="actionPlay">自动播放</string>
    <string name="actionOpen">打开文件</string>
</resources>
