<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/actionSettings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:icon="@drawable/ic_backup"
        android:title="@string/actionOpenFile"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/actionDelete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_open"
        android:title="@string/actionOpen"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_play"
        android:title="@string/actionPlay"
        app:showAsAction="never"/>
</menu>
